# lib

./: .gitignore  CHANGELOG.md  README.md  all_lasts.py  email_update.py  find_duplicates.py  fixed-wheel.whl  ftp_update.py  generate_init.py  get_email_path.py  get_filename_from_path.py  get_hash.py  get_path_file.py  increment_version.py  lasts.py  mail.py  move_file.py  project.sh  publish.sh  pyproject.toml  pyproject.toml.bak  remove_duplicates.py  report.xml  requirements.txt  setup.py  setup.py.bak  version.py  version.sh
.github/workflows/: python-app.yml  python-publish.yml  release.yml
config/: ftp_update.py  get_email_path.py  get_ftp_path.py  get_path_file.py
email/: connect.py  download_all_attachments_in_inbox.py  download_attachments_in_email.py  download_emails.py
examples/: CompanyList_example.py  arrayElementsAreIncluded_example.py  check_and_create_path_example.py  check_and_create_path_from_filepath_example.py  convert_pdf_to_base64_example.py  convert_pdf_to_string_example.py  create_dir_structure_example.py  create_dir_structure_from_headers_example.py  create_folder_example.py  create_folders_files_example.py  create_function_by_text_example.py  create_functions_based_on_csv_example.py  delete_emails_example.py  differenceElementsInArrays_example.py  dir_list_example.py  download_attachments_in_email_example.py  download_emails_example.py  extract_domain_name_from_url_example.py  file_list_example.py  find_duplicates_example.py  find_string_in_file_path_example.py  find_string_in_pdf_example.py  find_string_in_pdf_simple_example.py  flat_array_example.py  from_folder_to_year_example.py  from_month_to_company_example.py  ftp_download_example.py  ftp_update_example.py  get_code_extension_dict_example.py  get_company_from_pdf_example.py  get_config_example.py  get_date_from_pdf_example.py  get_date_from_pdf_pattern_example.py  get_dictionary_structure_by_separator_list_example.py  get_dictionary_structure_from_headers_content_example.py  get_domain_from_url_example.py  get_email_path_example.py  get_filename_by_text_example.py  get_filename_from_path_example.py  get_foldername_by_text_example.py  (+23 more)
file/: archive_path_list.py  check_and_create_path.py  find_duplicates.py  move_duplicate_files.py  pdf_merge.py  remove_duplicates.py  remove_duplicates_in_path.py  sum_year_from_path_to_file.py
github/: set_domain_on_github_org_pages.py
install/: fedora.sh  pyfunc2.sh
markdown/: create_dir_structure.py  create_dir_structure_from_headers.py  create_folders_files.py  get_code_extension_dict.py  get_dictionary_structure_by_separator_list.py  get_dictionary_structure_from_headers_content.py
ocr/: CompanyList.py  company_list.py  find_string_in_file_path.py  find_string_in_pdf.py  from_folder_to_year.py  from_month_to_company.py  get_company_from_pdf.py  get_date_from_pdf.py  get_date_from_pdf_pattern.py
serialization/: find_words.py  generate_pattern.py
src/github/: configure_github_pages_branch.py  create_notexisting_folder.py  create_organization_on_github.py  create_project_in_org.py  create_repo_on_github.py  create_repo_on_github_and_local.py  create_repo_on_not_git_repo_folder.py  defaults.py  delete_branch_on_github.py  enable_github_pages.py  get_domain_from_page.py  get_repos.py  get_repository_list_wtih_github_pages.py  new_organization_scenario.py  rename_branch_on_github.py  set_domain_on_github_org_pages.py  set_github_pages_domain.py  update_default_branch_on_github.py  update_github_pages.py  update_organization_on_github.py  update_organization_projects.py  update_repo_on_github.py
src/pyfunc2/: __init__.py  _version.py  _version.py.bak
src/pyfunc2/function/: __init__.py
src/pyfunc2/github/: __init__.py
src/pyfunc2/markdown/: create_dir_structure_from_headers.py  create_folders_files.py
src/pyfunc2/ocr/: __init__.py  get_company_from_pdf.py
srccc/pyfunc2/: __init__.py
srccc/pyfunc2/markdown/: __init__.py
srccc/pyfunc2/text/: __init__.py
temp_wheel/pyfunc2/: _version.py
temp_wheel/pyfunc2-0.1.21.dist-info/: METADATA  RECORD
test/: pipeline.py
version/: src.py
wheel_fix/pyfunc2/: _version.py
wheel_fix/pyfunc2-0.1.23.dist-info/: METADATA  RECORD
