[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfunc2"
version = "0.1.11"
description = "libs for cameramonit, ocr, fin-officer, cfo, and other projects"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.7"

authors = [
    { name = "Tom Sapletta", email = "tom@sapletta.com" }
]
maintainers = [
    { name = "pyfunc developers", email = "info@softreck.dev" }
]

[project.urls]
homepage = "https://www.pyfunc.com"
repository = "https://github.com/pyfunc/lib"
changelog = "https://github.com/pyfunc/lib/releases"
wiki = "https://github.com/pyfunc/lib/wiki"
issue = "https://github.com/pyfunc/lib/issues/new"


[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pyfunc2", "pyfunc2.config", "pyfunc2.email", "pyfunc2.file"]

