[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfunc2"
version = "0.1.19"
description = "libs for cameramonit, ocr, fin-officer, cfo, and other projects"
readme = "README.md"
license = "Apache-2.0"
keywords = ["python", "pyfunc", "pyfunc2", "pyfunc3", "pyfunc4", "pyfunc5", "pyfunc6", "pyfunc7", "pyfunc8", "pyfunc9", "pyfunc10", "pyfunc11", "pyfunc12", "pyfunc13", "pyfunc14", "pyfunc15", "pyfunc16", "pyfunc17", "pyfunc18", "pyfunc19", "pyfunc20", "pyfunc21", "pyfunc22", "pyfunc23", "pyfunc24", "pyfunc25", "pyfunc26", "pyfunc27", "pyfunc28", "pyfunc29", "pyfunc30", "pyfunc31", "pyfunc32", "pyfunc33", "pyfunc34", "pyfunc35", "pyfunc36", "pyfunc37", "pyfunc38", "pyfunc39", "pyfunc40", "pyfunc41", "pyfunc42", "pyfunc43", "pyfunc"]
requires-python = ">=3.7"

authors = [
    { name = "Tom Sapletta", email = "tom@sapletta.com" }
]
maintainers = [
    { name = "pyfunc developers", email = "info@softreck.dev" }
]

[project.urls]
homepage = "https://www.pyfunc.com"
repository = "https://github.com/pyfunc/lib"
changelog = "https://github.com/pyfunc/lib/releases"
wiki = "https://github.com/pyfunc/lib/wiki"
issue = "https://github.com/pyfunc/lib/issues/new"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pyfunc2", "pyfunc2.config", "pyfunc2.email", "pyfunc2.file"]

